# pysystemtrade

./: .gitignore  pyproject.toml  setup.py
dashboard/: app.py
data/tools/: example use ContractComparison.ipynb
docs/: pandl_method_calls.md
docs/notebooks/: introduction_with_fxdata.ipynb
examples/data/: subscription_test.py
examples/introduction/: asimpletradingrule.ipynb  asimpletradingrule.py  average_notional_position.csv  ewmac_with_vol.csv  fast_ewma.csv  notiona_position_and_price.csv  notional_position.csv  pandl_in_points.csv  price_returns.csv  raw_ewmac.csv  slow_ewma.csv  sp500_price.csv  throwaway.py
examples/introduction/ewmac_learn/: ewmac_play.py  fast_ewma.csv  raw_ewmac.csv  slow_ewma.csv
examples/introduction/pandas_learn/: group_and_calculate_series.py
systems/accounts/: account_forecast.py
systems/accounts/order_simulator/: pandl_order_simulator.py
systems/accounts/pandl_calculators/: pandl_calculation.py
systems/provided/futures_chapter15/: basesystem.py
