[project]
name = "pysystemtrade"
version = "1.80"
authors = [
  { name="Robert Carver", email="rob@systematicmoney.org" },
]
description = "Systematic futures trading in Python"
readme = "README.md"
license = {text = "GNU v3"}
keywords = ["systematic trading", "interactive brokers", "futures", "optimisation", "backtesting", "portfolio management"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
]
dependencies = [
    "pandas==2.1.3",
    "matplotlib>=3.0.0",
    "ib-insync==0.9.86",
    "PyYAML>=5.3",
    "numpy>=1.24.0",
    "scipy>=1.0.0",
    "pymongo==3.11.3",
    "psutil==5.6.6",
    "pytest>6.2",
    "Flask>=2.0.1",
    "Werkzeug>=2.0.1",
    "statsmodels==0.14.0",
    "PyPDF2>=2.5.0",
    "pyarrow>=14.0.1",
    "scikit-learn>1.3.0"
]

[project.urls]
"Homepage" = "https://github.com/robcarver17/pysystemtrade"
"Bug Tracker" = "https://github.com/robcarver17/pysystemtrade/issues"

[tool.pytest.ini_options]
norecursedirs = "examples"
addopts = "--doctest-modules --ignore=systems/provided/moretradingrules/temp.py"
log_cli = "true"
log_cli_level = 10
log_format = '%(asctime)s %(levelname)s %(name)s %(message)s'
log_date_format = '%Y-%m-%d %H:%M:%S'
doctest_optionflags = ["ELLIPSIS", "NUMBER", "NORMALIZE_WHITESPACE"]
testpaths = [
    # "syscore",
    # "syscore/interactive/display",
    "syscore/pandas",
    "syscore/tests",
    # "sysdata",
    "sysdata/config",
    # "sysdata/sim",
    "sysdata/tests",
    "sysinit/futures/tests",
    # "syslogdiag",
    "systems/tests",
    "sysobjects/production",
    "sysobjects/tests",
    # "sysquant/estimators",
    "sysquant/optimisation",
    # "systems",
    # "systems/accounts",
    # "systems/provided",
    # "systems/provided/futures_chapter15",
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py310']
required-version = '23.11.0'

[build-system]
requires = ["setuptools>=42", "wheel", "cython"]
build-backend = "setuptools.build_meta"

